force-app/main/default/objects/MPIntegrationStatus__c/MPIntegrationStatus__c.object-meta.xml
<CustomObject>
    <description>Objeto que almacena el historico de llamadas a la API de Mall Plaza</description>
    <label>Integration Status</label>
    <nameField>
        <displayFormat>IS-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integrations Status</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>