force-app/main/default/objects/MPIntegrationStatus__c/fields/MPHttpCode__c.field-meta.xml
<CustomField>
    <fullName>MPHttpCode__c</fullName>
    <label>Código Http</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>