force-app/main/default/objects/MPIntegrationStatus__c/fields/MPIntegrationName__c.field-meta.xml
<CustomField>
    <fullName>MPIntegrationName__c</fullName>
    <description>Nombre de la integración</description>
    <label>Integración</label>
    <length>50</length>
    <type>Text</type>
</CustomField>