force-app/main/default/objects/MPIntegrationStatus__c/fields/MPParams__c.field-meta.xml
<CustomField>
    <fullName>MPParams__c</fullName>
    <description>Parametros agregados al cuerpo de la solicitud</description>
    <label>Parámetros</label>
    <type>TextArea</type>
</CustomField>