force-app/main/default/objects/MPIntegrationStatus__c/fields/MPParentId__c.field-meta.xml
<CustomField>
    <fullName>MPParentId__c</fullName>
    <description>Id del registro que desencadena la integración</description>
    <label>Id padre</label>
    <length>18</length>
    <type>Text</type>
</CustomField>