force-app/main/default/objects/MPIntegrationStatus__c/fields/MPRequest__c.field-meta.xml
<CustomField>
    <fullName>MPRequest__c</fullName>
    <label>Petición</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>