force-app/main/default/objects/MPIntegrationStatus__c/fields/MPRequestDateTime__c.field-meta.xml
<CustomField>
    <fullName>MPRequestDateTime__c</fullName>
    <label>Fecha de petición</label>
    <type>DateTime</type>
</CustomField>