force-app/main/default/objects/MPIntegrationStatus__c/fields/MPResponse__c.field-meta.xml
<CustomField>
    <fullName>MPResponse__c</fullName>
    <label>Respuesta</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>