force-app/main/default/objects/MPIntegrationStatus__c/fields/MPResponseDateTime__c.field-meta.xml
<CustomField>
    <fullName>MPResponseDateTime__c</fullName>
    <label>Fecha de respuesta</label>
    <type>DateTime</type>
</CustomField>