force-app/main/default/objects/MPIntegrationStatus__c/fields/MPSalesforceException__c.field-meta.xml
<CustomField>
    <fullName>MPSalesforceException__c</fullName>
    <description>Contiene las excepciones capturadas que ocurren en Salesforce</description>
    <label>Error Salesforce</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>