force-app/main/default/objects/MPIntegrationStatus__c/fields/MPStatus__c.field-meta.xml
<CustomField>
    <fullName>MPStatus__c</fullName>
    <description>Estado de la integración</description>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MPIntegrationStatusValues</valueSetName>
    </valueSet>
</CustomField>