force-app/main/default/objects/MPIntegrationStatus__c/validationRules/VRINT_001_MPIntegrationStatusControl.validationRule-meta.xml
<ValidationRule>
    <fullName>VRINT_001_MPIntegrationStatusControl</fullName>
    <active>true</active>
    <errorConditionFormula>!($Profile.Name = &quot;System Administrator&quot;) &amp;&amp;
!($Profile.Name = &quot;Administrador del sistema&quot;) &amp;&amp;

ISCHANGED( OwnerId )</errorConditionFormula>
    <errorMessage>No es posible modificar estos campos (VRINT_001)</errorMessage>
</ValidationRule>